[project]
name = "bookmaster"
version = "0.1.0"
description = "Understand your documents with BookMaster"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.7",
    "tiktoken>=0.11.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.1.1",
    "pypdf>=4.0.0",
]
